scribble/scribble-assertions/src/test/resources/bad/extensions/assertions/Choice.scr
module bad.extensions.assertions.Choice;


type <java> "java.lang.int" from "rt.jar" as int;


// Check history sensitivity in choice
// Does not work for some reason -- now fixed?
global protocol Proto1(role A, role B)
{
	choice at A
	{
		//[x<10]
		MSG1(x:int) from A to B;  @"(x < 10)"
	}
	or
	{
		//[y>x]
		MSG2(y:int) from A to B;  @"(y > x)"
	}
}